--- a/Models/Models.vcxproj
+++ b/Models/Models.vcxproj
@@ -87,6 +87,7 @@
     <ClCompile Include="ModelsDemo.cpp" />
     <ClCompile Include="objLoader.cpp" />
     <ClCompile Include="player.cpp" />
+    <ClCompile Include="PlayerChar.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="TokenStream.cpp" />
   </ItemGroup>
@@ -100,6 +101,7 @@
     <ClInclude Include="ModelsDemo.h" />
     <ClInclude Include="objLoader.h" />
     <ClInclude Include="player.h" />
+    <ClInclude Include="PlayerChar.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="TokenStream.h" />
   </ItemGroup>
